tree-sitter-dowe/grammar.js
module.exports = grammar({
  name: "dowe",
  extras: ($) => [/[ \r]/],
  externals: ($) => [$.suite_marker],
  conflicts: ($) => [
    [$.root_keyword, $.block_keyword],
  ],
  inline: ($) => [$.prop_name],
  rules: {
    source_file: ($) =>
      choice(
        prec(3, seq(optional("\n"), $.translation_catalog)),
        repeat(
          choice(
            seq(
              choice(
                $.import_statement,
                $.type_declaration,
                $.code_property_line,
                $.node_line,
                $.text_line,
              ),
              "\n",
            ),
            "\n",
          ),
        ),
      ),
    translation_catalog: ($) =>
      prec.right(
        2,
        seq(
          $.translation_root,
          repeat1(seq("\n", $.translation_line)),
          repeat("\n"),
        ),
      ),
    translation_root: ($) =>
      prec(2, seq(field("name", "translations"), repeat($.line_item))),
    translation_line: ($) =>
      choice($.translation_entry_line, $.translation_key_line),
    translation_entry_line: ($) =>
      prec(2, seq(field("name", "translation"), repeat1($.line_item))),
    translation_key_line: ($) =>
      prec.right(seq(field("name", $.identifier), optional($.string))),
    import_statement: ($) =>
      seq("import", choice($.import_specifiers, seq($.identifier, repeat(seq(",", $.identifier)))), "from", $.import_path),
    import_specifiers: ($) => seq("{", $.identifier, repeat(seq(",", $.identifier)), "}"),
    type_declaration: ($) => seq($.type_keyword, $.type_name),
    code_property_line: ($) =>
      prec(6, seq(alias(choice("scheme", "content", "template", "copyLabel", "copiedLabel"), $.property_name), ":", $.value)),
    node_line: ($) =>
      choice(
        seq(field("name", $.line_name), repeat($.line_item)),
        prec(
          2,
          seq(
            field("name", $.callable_name),
            field("binding", $.callable_binding),
            repeat($.line_item),
          ),
        ),
      ),
    line_name: ($) =>
      choice(
        $.type_field,
        $.root_keyword,
        $.block_keyword,
        $.control_keyword,
        $.fn_keyword,
        $.component_name,
        $.user_component_name,
      ),
    text_line: ($) => seq(field("text", $.text_token), repeat($.text_token)),
    line_item: ($) =>
      choice(
        $.request_json_binding,
        $.body_type_binding,
        $.type_prop,
        $.prop,
        $.suite_marker,
        $.value,
      ),
    body_type_binding: ($) =>
      prec(3, seq($.body_keyword, token.immediate(":"), $.type_reference)),
    request_json_binding: ($) =>
      prec(10, seq($.body_keyword, alias($.request_json_value_name, $.property_name), ":", $.reference)),
    type_prop: ($) =>
      prec(2, seq($.type_keyword, token.immediate(":"), $.type_reference)),
    prop: ($) => prec(5, seq($.prop_name, ":", $.value)),
    prop_name: ($) =>
      prec(
        6,
        choice(
          alias($.route_graph_prop_name, $.property_name),
          alias($.each_prop_name, $.property_name),
          $.property_name,
          $.host_function,
          $.body_keyword,
        ),
      ),
    route_graph_prop_name: ($) => token(prec(2, choice("layout", "page"))),
    request_json_value_name: ($) => token(prec(7, "value")),
    each_prop_name: ($) => token(prec(2, choice("in", "as", "key"))),
    value: ($) =>
      choice(
        $.multiline_string,
        $.string,
        $.array,
        $.object,
        $.boolean,
        $.null,
        $.number,
        $.array_type_reference,
        $.host_function,
        $.method_name,
        $.path_literal,
        $.reference,
        $.identifier,
        $.property_name,
        $.body_keyword,
        $.text_fragment,
        $.punctuation,
      ),
    text_token: ($) =>
      choice(
        $.multiline_string,
        $.string,
        $.reference,
        $.path_literal,
        $.host_function,
        $.method_name,
        $.number,
        $.boolean,
        $.null,
        $.identifier,
        $.body_keyword,
        $.text_fragment,
        $.punctuation,
      ),
    array: ($) =>
      prec(7, seq(
        "[",
        repeat("\n"),
        optional(
          seq(
            $.value,
            repeat(seq(",", repeat("\n"), $.value)),
            optional(","),
          ),
        ),
        repeat("\n"),
        "]",
      )),
    object: ($) =>
      seq("{", repeat(choice($.object_entry, $.spread, "\n")), "}"),
    object_entry: ($) => seq($.property_name, ":", $.value),
    spread: ($) => seq("...", $.reference),
    import_path: ($) => /"[^"\n]*"/,
    multiline_string: ($) =>
      token(seq('"""', repeat(choice(/[^\"]/, /"[^\"]/, /""[^\"]/)), '"""')),
    string: ($) => /"([^"\\]|\\.)*"/,
    boolean: ($) => token(prec(2, choice("true", "false"))),
    null: ($) => "null",
    number: ($) => /[+-]?\d+(\.\d+)?/,
    reference: ($) =>
      token(prec(2, /[A-Za-z_][A-Za-z0-9_]*(\.[A-Za-z_][A-Za-z0-9_]*)+/)),
    path_literal: ($) => /\/[A-Za-z0-9_./:-]*/,
    host_function: ($) =>
      token(
        prec(
          3,
          choice(
            "req.query",
            "req.rawQuery",
            "req.cookie",
            "agent.chat",
            "ws.json",
          ),
        ),
      ),
    method_name: ($) => choice("GET", "POST", "PUT", "PATCH", "DELETE"),
    type_field: ($) =>
      seq(
        $.type_field_key,
        optional(token.immediate("?")),
        token.immediate(":"),
        choice($.type_reference, $.value),
      ),
    type_field_key: ($) => $.type_field_name,
    type_field_name: ($) => token(prec(-1, /[A-Za-z_][A-Za-z0-9_]*/)),
    type_reference: ($) =>
      token.immediate(prec(3, /[A-Za-z_][A-Za-z0-9_]*(\[\])?/)),
    array_type_reference: ($) => token(prec(4, /[A-Za-z_][A-Za-z0-9_]*\[\]/)),
    type_name: ($) => token(prec(3, /[A-Za-z_][A-Za-z0-9_]*/)),
    type_keyword: ($) => token(prec(5, "type")),
    body_keyword: ($) => token(prec(5, "body")),
    body_block_keyword: ($) => token(prec(6, "body")),
    text_fragment: ($) => token(prec(-2, /[^ \r\n\t\[\]\{\}",:\/]+/)),
    root_keyword: ($) =>
      choice(
        "main",
        "views",
        "translations",
        "layout",
        "page",
        "component",
        "store",
        "entity",
        "seeder",
        "test",
        $.type_keyword,
      ),
    block_keyword: ($) =>
      choice(
        "desktop",
        "server",
        "tls",
        "route",
        "endpoints",
        "method",
        "get",
        "post",
        "put",
        "patch",
        "delete",
        "handler",
        "middleware",
        "websocket",
        "udp",
        "tcp",
        "packet",
        "connection",
        "rtp",
        "model",
        "init",
        "app",
        "fonts",
        "env",
        "variable",
        "cors",
        "design",
        "theme",
        "colors",
        "radius",
        "shadow",
        "shadowColor",
        "border",
        "borderColor",
        "scheme",
        "variant",
        "translation",
        "meta",
        "children",
        "start",
        "center",
        "end",
        "appBar",
        "main",
        "bottomBar",
        "overlays",
        "header",
        alias($.body_block_keyword, "body"),
        "footer",
        "item",
        "mark",
        "marker",
        "waypoint",
        "divider",
        "trigger",
        "group",
        "submenu",
        "megamenu",
        "icon",
        "content",
        "column",
        "tab",
        "step",
        "slide",
        "assert",
      ),
    control_keyword: ($) => choice("if", "else", "each"),
    fn_keyword: ($) =>
      choice(
        "signal",
        "database",
        "insert",
        "cache",
        "kv",
        "vector",
        "emb",
        "query",
        "const",
        "fn",
        "request",
        "set",
        "reset",
        "redirect",
        "toast",
        "return",
        "next",
        "bearer",
        "session",
        "send",
        "bridge",
        "go",
        "cron",
        "response",
        "jwt",
        "http",
        "crypto",
        "spawn",
        "let",
        "log",
        "info",
        "warn",
        "error",
        "open",
        "message",
        "close",
        "drain",
      ),
    component_name: ($) =>
      token(prec(3, choice(
        "Box",
        "Section",
        "Flex",
        "Grid",
        "Card",
        "Table",
        "Tabs",
        "Stepper",
        "AppBar",
        "Footer",
        "BottomBar",
        "SideNav",
        "RailNav",
        "Sidebar",
        "NavMenu",
        "Scaffold",
        "Splash",
        "Drawer",
        "Avatar",
        "AvatarGroup",
        "Badge",
        "ChatBox",
        "Chip",
        "Empty",
        "Skeleton",
        "Modal",
        "AlertDialog",
        "Tooltip",
        "Toast",
        "Dropdown",
        "Command",
        "Audio",
        "Image",
        "Accordion",
        "Carousel",
        "Checkbox",
        "Color",
        "Date",
        "DateRange",
        "RadioGroup",
        "Toggle",
        "ToggleTheme",
        "SelectTheme",
        "Fab",
        "fabAction",
        "Marquee",
        "TypeWriter",
        "RichText",
        "Record",
        "ToggleGroup",
        "Collapsible",
        "Countdown",
        "Map",
        "Slider",
        "Dropzone",
        "Input",
        "Select",
        "Option",
        "ComboBox",
        "comboOption",
        "CsvField",
        "csvColumn",
        "DragDrop",
        "dragGroup",
        "dragItem",
        "Editor",
        "ImageCropper",
        "PasswordField",
        "PhoneField",
        "PinField",
        "Textarea",
        "Code",
        "Video",
        "Iframe",
        "Device",
        "Canvas",
        "Candlestick",
        "ArcChart",
        "AreaChart",
        "BarChart",
        "LineChart",
        "PieChart",
        "Divider",
        "Button",
        "Brand",
        "Banner",
        "IconButton",
        "Alert",
        "Title",
        "Text",
        "Svg",
        "Icon",
        "Path",
      ))),
    user_component_name: ($) => token(prec(2, /[A-Z][A-Za-z0-9_]*/)),
    callable_name: ($) => prec(1, $.identifier),
    callable_binding: ($) => $.identifier,
    property_name: ($) => token(prec(1, /[A-Za-z_][A-Za-z0-9_]*/)),
    identifier: ($) => token(prec(-1, /[A-Za-z_][A-Za-z0-9_]*/)),
    punctuation: ($) => choice(",", ".", "!", "?", ";"),
  },
});
