tree-sitter-dowe/test/corpus/server.txt
==================
Multiple imports
==================

import listBlogs, createBlog from "../handlers/blogs"
import { readBlog, updateBlog } from "../handlers/blogs"

---

(source_file
  (import_statement
    (identifier)
    (identifier)
    (import_path))
  (import_statement
    (import_specifiers
      (identifier)
      (identifier))
    (import_path)))

==================
Native server TLS
==================

main
  server port:443
    tls:
      mode:"acme"
      domains:["example.com", "www.example.com"]
      email:"admin@example.com"
      staging:false
      domainsFrom:{ kv:"domains" key:"tls" }
      refreshSeconds:60

---

(source_file
  (node_line
    (line_name
      (root_keyword)))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (number)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (suite_marker)))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (value
          (string)))))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (value
          (array
            (value
              (string))
            (value
              (string)))))))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (value
          (string)))))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (type_reference))))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (value
          (object
            (object_entry
              (property_name)
              (value
                (string)))
            (object_entry
              (property_name)
              (value
                (string))))))))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (value
          (number))))))

==================
Server spawn declaration
==================

handler inspectMedia async
  spawn ffmpeg command:"ffmpeg" args:["-version"] timeoutMs:5000 maxOutputBytes:65536
  return response json:{ ok:ffmpeg.ok }

---

(source_file
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (array
            (value
              (string))))))
    (line_item
      (prop
        (property_name)
        (value
          (number))))
    (line_item
      (prop
        (property_name)
        (value
          (number)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (object
            (object_entry
              (property_name)
              (value
                (reference)))))))))

==================
Server route middleware and JWT host functions
==================

server
  route "/users/:id" middleware:[requireBearer]

middleware requireBearer params:{}
  bearer token value:req.header.Authorization
  jwt verified secret:env.JWT_SECRET algorithm:"HS256" token:token
  if verified.valid
    next
  return response status:401 json:{ ok:false error:"Unauthorized" }

---

(source_file
  (node_line
    (line_name
      (block_keyword)))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (value
        (string)))
    (line_item
      (prop
        (property_name)
        (value
          (array
            (value
              (property_name)))))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (object)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (reference)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (property_name)))))
  (node_line
    (line_name
      (control_keyword))
    (line_item
      (value
        (reference))))
  (node_line
    (line_name
      (fn_keyword)))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (number))))
    (line_item
      (prop
        (property_name)
        (value
          (object
            (object_entry
              (property_name)
              (value
                (boolean)))
            (object_entry
              (property_name)
              (value
                (string)))))))))

==================
Vector connection and embedding search
==================

vector appVector provider:"dowe" host:env.VECTOR_HOST port:env.VECTOR_PORT account:env.VECTOR_USER secret:env.VECTOR_PASSWORD name:env.VECTOR_DATABASE
emb matches conn:appVector.search vector:req.body.vector limit:10

---

(source_file
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (number))))))

==================
Declared types
==================

type User
  name:string
  age:number

handler createUser async
  const body:User value:req.json

---

(source_file
  (type_declaration
    (type_keyword)
    (type_name))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (type_reference))))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (type_reference))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (body_type_binding
        (body_keyword)
        (type_reference)))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))))

==================
LLM server outbound HTTP and WebSocket bridge
==================

handler chatCompletions async
  const body value:req.json
  http upstream method:"post" base:env.OPENROUTER_BASE_URL path:"/api/v1/chat/completions" bearer:env.OPENROUTER_API_KEY json:body mode:"proxy"
  return response proxy:upstream

websocket "/api/v1/agent/ws"
  message ws
    let request = ws.json
    send ws json:{ event:"started" requestId:request.requestId requestType:request.requestType model:request.model payload:{ stream:request.stream } }
    let chat = agent.chat request
    http upstream method:"post" base:env.OPENROUTER_BASE_URL path:"/api/v1/chat/completions" bearer:env.OPENROUTER_API_KEY json:chat mode:"proxy"
    bridge sse:upstream to:ws requestId:request.requestId requestType:request.requestType model:request.model

---

(source_file
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (request_json_binding
        (body_keyword)
        (property_name)
        (reference))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (body_keyword))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (property_name)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (value
        (string))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (value
        (text_fragment)))
    (line_item
      (value
        (host_function))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (object
            (object_entry
              (property_name)
              (value
                (string)))
            (object_entry
              (property_name)
              (value
                (reference)))
            (object_entry
              (property_name)
              (value
                (reference)))
            (object_entry
              (property_name)
              (value
                (reference)))
            (object_entry
              (property_name)
              (value
                (object
                  (object_entry
                    (property_name)
                    (value
                      (reference)))))))))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (value
        (text_fragment)))
    (line_item
      (value
        (host_function)))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))))

==================
General server outbound HTTP request
==================

handler fetchProducts async
  http upstream method:"get" base:env.CATALOG_BASE_URL path:"/products" headers:[{ name:"Accept" value:"application/json" }] redirect:"manual" timeoutMs:5000 mode:"json"
  return response json:upstream

---

(source_file
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (array
            (value
              (object
                (object_entry
                  (property_name)
                  (value
                    (string)))
                (object_entry
                  (property_name)
                  (value
                    (string)))))))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (number))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))))

==================
Server function modules
==================

fn listTickets
  let rows = listTicketsRepository args:{ status:args.status }
  return value:{ ok:true data:rows }

fn listTicketsRepository
  database db provider:"dowe" host:"127.0.0.1" port:4147 account:"api" secret:"secret" name:"support"
  query rows db:db.list table:"tickets"
  return value:{ rows:rows }

---

(source_file
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (value
        (text_fragment)))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (object
            (object_entry
              (property_name)
              (value
                (reference))))))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (object
            (object_entry
              (property_name)
              (value
                (boolean)))
            (object_entry
              (property_name)
              (value
                (property_name))))))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (number))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (object
            (object_entry
              (property_name)
              (value
                (property_name)))))))))

==================
Database schema bindings
==================

entity Users
  id:string primary:true
  name:string required:true

seeder Bootstrap
  insert entity:Users value:{ id:"admin" name:"Administrator" }

database appDb provider:"postgres" host:env.POSTGRES_HOST port:env.POSTGRES_PORT account:env.POSTGRES_USER secret:env.POSTGRES_PASSWORD name:env.POSTGRES_DATABASE entities:[Users] seeders:[Bootstrap]

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (type_reference)))
    (line_item
      (prop
        (property_name)
        (value
          (boolean)))))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (type_reference)))
    (line_item
      (prop
        (property_name)
        (value
          (boolean)))))
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (object
            (object_entry
              (property_name)
              (value
                (string)))
            (object_entry
              (property_name)
              (value
                (string))))))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (array
            (value
              (property_name))))))
    (line_item
      (prop
        (property_name)
        (value
          (array
            (value
              (property_name))))))))

==================
Media proxy server primitives
==================

handler dashSegment async
  let query = req.query
  let raw = req.rawQuery
  let session = req.cookie name:"session"
  http upstream method:"get" base:env.MEDIA_BASE_URL path:"/segment.m4s" mode:"bytes"
  crypto decrypted encryption:"cencAesCtr" data:upstream key:env.MEDIA_KEY iv:env.MEDIA_IV subsamples:[{ clear:5 encrypted:1024 }]
  spawn ffmpeg command:"ffmpeg" args:["-version"] timeoutMs:5000
  return response bytes:decrypted contentType:"video/mp4"

---

(source_file
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (value
        (text_fragment)))
    (line_item
      (value
        (host_function))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (value
        (text_fragment)))
    (line_item
      (value
        (host_function))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (value
        (text_fragment)))
    (line_item
      (value
        (host_function)))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (array
            (value
              (object
                (object_entry
                  (property_name)
                  (value
                    (number)))
                (object_entry
                  (property_name)
                  (value
                    (number))))))))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (array
            (value
              (string))))))
    (line_item
      (prop
        (property_name)
        (value
          (number)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))))

==================
Server background jobs
==================

go cleanup args:{ source:"startup" }
cron cleanup schedule:"0 3 * * *" args:{ retentionDays:30 }

---

(source_file
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (object
            (object_entry
              (property_name)
              (value
                (string))))))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (object
            (object_entry
              (property_name)
              (value
                (number)))))))))

==================
Declarative endpoint groups
==================

endpoints apiRoutes
  group path:"/api"
    get path:"/status" handler:getStatus
    post:
      path:"/posts"
    websocket path:"/control" middleware:[requireSocketToken]

---

(source_file
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (property_name)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (suite_marker)))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (value
          (string)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (array
            (value
              (property_name))))))))

==================
Cache connection and KV operation
==================

cache appCache provider:"dowe" host:env.CACHE_HOST port:env.CACHE_PORT account:env.CACHE_USER secret:env.CACHE_PASSWORD name:env.CACHE_DATABASE
kv saved conn:appCache.set key:"appointment:1" value:{ patientName:"Ana" }

---

(source_file
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (reference)))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (object
            (object_entry
              (property_name)
              (value
                (string)))))))))
